@@ -2,7 +2,7 @@
  * (C) Copyright 2007-2009 Michal Simek
  * Michal SIMEK <monstr@monstr.eu>
  *
- * (C) Copyright 2010 Li-Pro.Net
+ * (C) Copyright 2010-2011 Li-Pro.Net
  * Stephan Linz <linz@li-pro.net>
  *
  * This program is free software; you can redistribute it and/or
@@ -59,7 +59,7 @@
 
 /* System memory is mpmc_0 */
 #define XILINX_RAM_START                         0x20000000
-#define XILINX_RAM_SIZE                          0x08000000
+#define XILINX_RAM_SIZE                          0x00000000
 
 /* NOR Flash memory is xps_mch_emc_0 */
 #define XILINX_FLASH_START                       0xaf000000
@@ -81,6 +81,4 @@
 #define XILINX_LLTEMAC                          
 #define XILINX_LLTEMAC_BASEADDR                  0x88F00000
 #define XILINX_LLTEMAC_SDMA_CTRL_BASEADDR        0x8adf0080
-
-/* S2I GigE Vision Ethernet MAC not defined */
 
